<resources>
    <string name="app_name">myAgenda</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="empty_to_do_list">Empty To-Do List!</string>
    <string name="to_do">To-Do:</string>
    <string name="item_name_required">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="high_priority">High Priority</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="when">When:</string>
    <string name="at">at</string>
    <string name="high_priority_1">High Priority:</string>
    <string name="additional_notes">Additional Notes:</string>
    <string name="complete">Complete</string>
    <string name="edit">Edit</string>
    <string name="back_1">Back</string>
    <string name="edit_item">Edit Item:</string>
</resources>