<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B29576"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/edit_item"
        android:textColor="#811112"
        android:textColorHighlight="#8E2C2C"
        android:textColorHint="#9A2127"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/textEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:hint="@string/item_name_required"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#811112"
        android:textColorHighlight="#000000"
        android:textColorHint="#AC3834"
        android:textColorLink="#000000" />

    <EditText
        android:id="@+id/textEditDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="#811112"
        android:textColorHint="#AC3834" />

    <EditText
        android:id="@+id/textEditTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:padding="10dp"
        android:textColor="#811112"
        android:textColorHint="#AC3834" />

    <EditText
        android:id="@+id/textEditDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#811112"
        android:textColorHint="#AC3834" />

    <CheckBox
        android:id="@+id/checkBoxHighPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:text="@string/high_priority"
        android:textColor="#811112"
        android:textColorHint="#CAB7A1"
        android:textSize="20sp"
        app:buttonTint="#8C0006" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:text="@string/add"
        app:backgroundTint="#881D1D" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:text="@string/clear"
        app:backgroundTint="#881D1D" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:text="@string/back"
        app:backgroundTint="#AC3834" />

</LinearLayout>