<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B29576"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#811112"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textLabelDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/when"
        android:textColor="#AC3834"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#881D1D"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLabelTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/at"
        android:textColor="#AC3834"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#881D1D"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLabelPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/high_priority_1"
        android:textColor="#AC3834"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#881D1D"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textLabelDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/additional_notes"
        android:textColor="#AC3834"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="3dp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="#881D1D" />

    <Button
        android:id="@+id/buttonComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="#009688"
        android:padding="10dp"
        android:text="@string/complete"
        app:backgroundTint="#2C632E" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:text="@string/edit"
        app:backgroundTint="#881D1D" />

    <Button
        android:id="@+id/buttonViewBack"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="10dp"
        android:text="@string/back"
        app:backgroundTint="#AC3834" />
</LinearLayout>